<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/black">

	<TextView
		android:id="@+id/myBodyTextView"
		style="@style/Header.White"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginTop="24dp"
		android:text="@string/my_body"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		app:layout_constraintGuide_percent="0.5" />

	<TextView
		android:id="@+id/weightTextView"
		style="@style/Header.White"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="24dp"
		android:text="@string/weight_placeholder"
		app:layout_constraintEnd_toStartOf="@+id/guideline"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/myBodyTextView" />

	<TextView
		android:id="@+id/heightTextView"
		style="@style/Header.White"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/height_placeholder"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="@+id/guideline"
		app:layout_constraintTop_toTopOf="@+id/weightTextView" />

	<Button
		android:id="@+id/editWeightButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="@android:color/transparent"
		android:fontFamily="@font/montserrat"
		android:text="@string/edit"
		android:textAllCaps="false"
		android:textColor="@color/gray"
		android:textSize="12sp"
		app:layout_constraintEnd_toEndOf="@+id/weightTextView"
		app:layout_constraintStart_toStartOf="@+id/weightTextView"
		app:layout_constraintTop_toBottomOf="@+id/weightTextView" />

	<Button
		android:id="@+id/editHeightButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="@android:color/transparent"
		android:fontFamily="@font/montserrat"
		android:text="@string/edit"
		android:textAllCaps="false"
		android:textColor="@color/gray"
		android:textSize="12sp"
		app:layout_constraintEnd_toEndOf="@+id/heightTextView"
		app:layout_constraintStart_toStartOf="@+id/heightTextView"
		app:layout_constraintTop_toBottomOf="@+id/heightTextView" />

	<TextView
		android:id="@+id/myBodyTextView2"
		style="@style/Header.White"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="48dp"
		android:text="@string/my_progress"
		app:layout_constraintStart_toStartOf="@+id/myBodyTextView"
		app:layout_constraintTop_toBottomOf="@+id/editWeightButton" />

	<Button
		android:id="@+id/seeAllButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="@android:color/transparent"
		android:fontFamily="@font/montserrat"
		android:text="@string/see_all"
		android:textAllCaps="false"
		android:textColor="@color/gray"
		android:textSize="12sp"
		app:layout_constraintBottom_toBottomOf="@+id/myBodyTextView2"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="@+id/myBodyTextView2" />

	<Button
		android:id="@+id/toTrainProgressButton"
		style="@style/NavigationButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="22dp"
		android:drawableRight="@drawable/ic_right"
		android:text="@string/train_progress"
		app:layout_constraintBottom_toTopOf="@+id/toStatisticsButton"
		app:layout_constraintStart_toStartOf="@+id/toStatisticsButton" />

	<Button
		android:id="@+id/toStatisticsButton"
		style="@style/NavigationButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="52dp"
		android:layout_marginStart="16dp"
		android:drawableRight="@drawable/ic_right"
		android:text="@string/statistics"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

	<ImageView
		android:id="@+id/firstImageView"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_marginBottom="16dp"
		android:layout_marginStart="16dp"
		android:layout_marginTop="14dp"
		android:adjustViewBounds="true"
		android:scaleType="centerCrop"
		app:layout_constraintBottom_toTopOf="@+id/toTrainProgressButton"
		app:layout_constraintEnd_toStartOf="@+id/guideline"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/myBodyTextView2"
		app:srcCompat="@drawable/first" />

	<ImageView
		android:id="@+id/lastImageView"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_marginEnd="16dp"
		android:adjustViewBounds="true"
		android:scaleType="centerCrop"
		app:layout_constraintBottom_toBottomOf="@+id/firstImageView"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="@+id/guideline"
		app:layout_constraintTop_toTopOf="@+id/firstImageView"
		app:srcCompat="@drawable/last" />

	<View
		android:id="@+id/divider"
		android:layout_width="4dp"
		android:layout_height="0dp"
		android:background="@drawable/divider"
		app:layout_constraintBottom_toBottomOf="@+id/firstImageView"
		app:layout_constraintEnd_toStartOf="@+id/guideline"
		app:layout_constraintStart_toStartOf="@+id/guideline"
		app:layout_constraintTop_toTopOf="@+id/firstImageView" />

	<TextView
		android:id="@+id/firstDateTextView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="8dp"
		android:background="@drawable/date"
		android:fontFamily="@font/montserrat"
		android:paddingHorizontal="12dp"
		android:paddingVertical="5dp"
		android:text="@string/date_placeholder"
		android:textColor="@color/white"
		app:layout_constraintBottom_toBottomOf="@+id/firstImageView"
		app:layout_constraintStart_toStartOf="@+id/firstImageView" />

	<TextView
		android:id="@+id/lastDateTextView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="8dp"
		android:background="@drawable/date"
		android:fontFamily="@font/montserrat"
		android:paddingHorizontal="12dp"
		android:paddingVertical="5dp"
		android:text="@string/date_placeholder"
		android:textColor="@color/white"
		app:layout_constraintBottom_toBottomOf="@+id/lastImageView"
		app:layout_constraintStart_toStartOf="@+id/guideline" />

	<ImageButton
		android:id="@+id/addImageButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:background="@drawable/ellipse"
		android:padding="4dp"
		app:layout_constraintBottom_toBottomOf="@+id/lastDateTextView"
		app:layout_constraintEnd_toEndOf="@+id/lastImageView"
		app:layout_constraintTop_toTopOf="@+id/lastDateTextView"
		app:srcCompat="@drawable/ic_add_image" />

</androidx.constraintlayout.widget.ConstraintLayout>